hot fix - set video onboarding fallbacks (#220)
* fix overlapping chat

* set video fallbacks

--- a/src/components/Chat/ChatContainer/ChatMessage/style.module.scss
+++ b/src/components/Chat/ChatContainer/ChatMessage/style.module.scss
@@ -2,6 +2,7 @@
   display: flex;
   color: white;
   margin: 5px 10px;
+  min-height: max-content;
 }
 
 .messageWrapper {
@@ -10,6 +11,7 @@
   flex-grow: 1;
   margin-left: 10px;
   word-break: break-all;
+  min-height: max-content;
 }
 
 .userName {
