--- a/src/components/Chat/ChatContainer/EmoteInput/style.module.scss
+++ b/src/components/Chat/ChatContainer/EmoteInput/style.module.scss
@@ -1,8 +1,10 @@
 .EmoteButton {
   position: absolute;
   right: 15px;
-  transform: translateY(50%);
-  bottom: 15px;
+  top: 50%;
+  transform: translateY(-50%);
+  display: flex;
+  cursor: pointer;
 }
 
 .EmoteContainer {
